--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,4 +7,22 @@
             color: #000000;
         }
     }
+    .popup{
+        position: fixed;
+    height: 100%;
+    width: 100%;    
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.4);
+    &-container{
+        background-color: #fff;
+        height: 250px;
+        padding: 20px;
+        width: 500px;
+        margin: 200px auto;
+        
+    }
+    }
 }
